--- a/study-notes.html
+++ b/study-notes.html
@@ -90,21 +90,7 @@
       <div class="full-index-content">
         <div class="single-content-title">基础</div>
         <div class="single-content">
-          <a><div>JavaScriptJavaScriptJavaScript</div></a>
-          <a><div>JavaScriptJavaScriptJavaScript</div></a>
-          <a><div>JavaScriptJavaScriptJavaScript</div></a>
-          <a><div>JavaScriptJavaScriptJavaScript</div></a>
-          <a><div>JavaScriptJavaScriptJavaScript</div></a>
-          <a><div>JavaScriptJavaScriptJavaScript</div></a>
-          <a><div>JavaScriptJavaScriptJavaScript</div></a>
-          <a><div>JavaScriptJavaScriptJavaScript</div></a>
-          <a><div>JavaScriptJavaScriptJavaScript</div></a>
-          <a><div>JavaScriptJavaScriptJavaScript</div></a>
-          <a><div>JavaScriptJavaScriptJavaScript</div></a>
-          <a><div>JavaScriptJavaScriptJavaScript</div></a>
-        </div>
-        <div class="single-content">
-          <a><div>JavaScriptJavaScriptJavaScript2</div></a>
+          <a><div>JavaScript</div></a>
           <a><div>JavaScriptJavaScriptJavaScript</div></a>
           <a><div>JavaScriptJavaScriptJavaScript</div></a>
           <a><div>JavaScriptJavaScriptJavaScript</div></a>
@@ -118,108 +104,26 @@
           <a><div>JavaScriptJavaScriptJavaScript</div></a>
         </div>
         <div class="single-content">
-          <a><div>JavaScriptJavaScriptJavaScript3</div></a>
-          <a><div>JavaScriptJavaScriptJavaScript</div></a>
-          <a><div>JavaScriptJavaScriptJavaScript</div></a>
-          <a><div>JavaScriptJavaScriptJavaScript</div></a>
-          <a><div>JavaScriptJavaScriptJavaScript</div></a>
-          <a><div>JavaScriptJavaScriptJavaScript</div></a>
-          <a><div>JavaScriptJavaScriptJavaScript</div></a>
-          <a><div>JavaScriptJavaScriptJavaScript</div></a>
-          <a><div>JavaScriptJavaScriptJavaScript</div></a>
-          <a><div>JavaScriptJavaScriptJavaScript</div></a>
-          <a><div>JavaScriptJavaScriptJavaScript</div></a>
-          <a><div>JavaScriptJavaScriptJavaScript</div></a>
+          <a><div>CSS</div></a>
         </div>
       </div>
       <div class="full-index-content">
         <div class="single-content-title">框架</div>
         <div class="single-content">
-          <a><div>JavaScriptJavaScriptJavaScript</div></a>
-          <a><div>JavaScriptJavaScriptJavaScript</div></a>
-          <a><div>JavaScriptJavaScriptJavaScript</div></a>
-          <a><div>JavaScriptJavaScriptJavaScript</div></a>
-          <a><div>JavaScriptJavaScriptJavaScript</div></a>
-          <a><div>JavaScriptJavaScriptJavaScript</div></a>
-          <a><div>JavaScriptJavaScriptJavaScript</div></a>
-          <a><div>JavaScriptJavaScriptJavaScript</div></a>
-          <a><div>JavaScriptJavaScriptJavaScript</div></a>
-          <a><div>JavaScriptJavaScriptJavaScript</div></a>
-          <a><div>JavaScriptJavaScriptJavaScript</div></a>
-          <a><div>JavaScriptJavaScriptJavaScript</div></a>
+          <a><div>Angular</div></a>
         </div>
         <div class="single-content">
-          <a><div>JavaScriptJavaScriptJavaScript2</div></a>
-          <a><div>JavaScriptJavaScriptJavaScript</div></a>
-          <a><div>JavaScriptJavaScriptJavaScript</div></a>
-          <a><div>JavaScriptJavaScriptJavaScript</div></a>
-          <a><div>JavaScriptJavaScriptJavaScript</div></a>
-          <a><div>JavaScriptJavaScriptJavaScript</div></a>
-          <a><div>JavaScriptJavaScriptJavaScript</div></a>
-          <a><div>JavaScriptJavaScriptJavaScript</div></a>
-          <a><div>JavaScriptJavaScriptJavaScript</div></a>
-          <a><div>JavaScriptJavaScriptJavaScript</div></a>
-          <a><div>JavaScriptJavaScriptJavaScript</div></a>
-          <a><div>JavaScriptJavaScriptJavaScript</div></a>
+          <a><div>React</div></a>
         </div>
         <div class="single-content">
-          <a><div>JavaScriptJavaScriptJavaScript3</div></a>
-          <a><div>JavaScriptJavaScriptJavaScript</div></a>
-          <a><div>JavaScriptJavaScriptJavaScript</div></a>
-          <a><div>JavaScriptJavaScriptJavaScript</div></a>
-          <a><div>JavaScriptJavaScriptJavaScript</div></a>
-          <a><div>JavaScriptJavaScriptJavaScript</div></a>
-          <a><div>JavaScriptJavaScriptJavaScript</div></a>
-          <a><div>JavaScriptJavaScriptJavaScript</div></a>
-          <a><div>JavaScriptJavaScriptJavaScript</div></a>
-          <a><div>JavaScriptJavaScriptJavaScript</div></a>
-          <a><div>JavaScriptJavaScriptJavaScript</div></a>
-          <a><div>JavaScriptJavaScriptJavaScript</div></a>
+          <a><div>jQuery</div></a>
         </div>
       </div>
       <div class="full-index-content">
         <div class="single-content-title">网络</div>
         <div class="single-content">
-          <a><div>JavaScriptJavaScriptJavaScript</div></a>
-          <a><div>JavaScriptJavaScriptJavaScript</div></a>
-          <a><div>JavaScriptJavaScriptJavaScript</div></a>
-          <a><div>JavaScriptJavaScriptJavaScript</div></a>
-          <a><div>JavaScriptJavaScriptJavaScript</div></a>
-          <a><div>JavaScriptJavaScriptJavaScript</div></a>
-          <a><div>JavaScriptJavaScriptJavaScript</div></a>
-          <a><div>JavaScriptJavaScriptJavaScript</div></a>
-          <a><div>JavaScriptJavaScriptJavaScript</div></a>
-          <a><div>JavaScriptJavaScriptJavaScript</div></a>
-          <a><div>JavaScriptJavaScriptJavaScript</div></a>
-          <a><div>JavaScriptJavaScriptJavaScript</div></a>
-        </div>
-        <div class="single-content">
-          <a><div>JavaScriptJavaScriptJavaScript2</div></a>
-          <a><div>JavaScriptJavaScriptJavaScript</div></a>
-          <a><div>JavaScriptJavaScriptJavaScript</div></a>
-          <a><div>JavaScriptJavaScriptJavaScript</div></a>
-          <a><div>JavaScriptJavaScriptJavaScript</div></a>
-          <a><div>JavaScriptJavaScriptJavaScript</div></a>
-          <a><div>JavaScriptJavaScriptJavaScript</div></a>
-          <a><div>JavaScriptJavaScriptJavaScript</div></a>
-          <a><div>JavaScriptJavaScriptJavaScript</div></a>
-          <a><div>JavaScriptJavaScriptJavaScript</div></a>
-          <a><div>JavaScriptJavaScriptJavaScript</div></a>
-          <a><div>JavaScriptJavaScriptJavaScript</div></a>
-        </div>
-        <div class="single-content">
-          <a><div>JavaScriptJavaScriptJavaScript3</div></a>
-          <a><div>JavaScriptJavaScriptJavaScript</div></a>
-          <a><div>JavaScriptJavaScriptJavaScript</div></a>
-          <a><div>JavaScriptJavaScriptJavaScript</div></a>
-          <a><div>JavaScriptJavaScriptJavaScript</div></a>
-          <a><div>JavaScriptJavaScriptJavaScript</div></a>
-          <a><div>JavaScriptJavaScriptJavaScript</div></a>
-          <a><div>JavaScriptJavaScriptJavaScript</div></a>
-          <a><div>JavaScriptJavaScriptJavaScript</div></a>
-          <a><div>JavaScriptJavaScriptJavaScript</div></a>
-          <a><div>JavaScriptJavaScriptJavaScript</div></a>
-          <a><div>JavaScriptJavaScriptJavaScript</div></a>
+          <a><div>通信</div></a>
+          <a><div>1. 跨域</div></a>
         </div>
       </div>
 
