--- a/study-notes.html
+++ b/study-notes.html
@@ -91,17 +91,14 @@
         <div class="single-content-title">基础</div>
         <div class="single-content">
           <a><div>JavaScript</div></a>
-          <a><div>JavaScriptJavaScriptJavaScript</div></a>
-          <a><div>JavaScriptJavaScriptJavaScript</div></a>
-          <a><div>JavaScriptJavaScriptJavaScript</div></a>
-          <a><div>JavaScriptJavaScriptJavaScript</div></a>
-          <a><div>JavaScriptJavaScriptJavaScript</div></a>
-          <a><div>JavaScriptJavaScriptJavaScript</div></a>
-          <a><div>JavaScriptJavaScriptJavaScript</div></a>
-          <a><div>JavaScriptJavaScriptJavaScript</div></a>
-          <a><div>JavaScriptJavaScriptJavaScript</div></a>
-          <a><div>JavaScriptJavaScriptJavaScript</div></a>
-          <a><div>JavaScriptJavaScriptJavaScript</div></a>
+          <a><div>1 什么是JavaScript</div></a>
+          <a><div>2 script标签</div></a>
+          <a><div>3 语法</div></a>
+          <a><div>4 变量声明</div></a>
+          <a><div>5 数据类型</div></a>
+          <a><div>6 数据类型之对象</div></a>
+          <a><div>7 操作符</div></a>
+          <a><div>8 逻辑语句</div></a>
         </div>
         <div class="single-content">
           <a><div>CSS</div></a>
