--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
       <div class="ins-content">
         <div class="ins-left">
           <div class="ins-news">
-            <div class="ins-news-logo">最新</div>
+            <div class="ins-news-logo">New</div>
             <div class="ins-news-title">小破站的艰辛建站史</div>
             <div class="ins-arrow"></div>
           </div>
