--- a/projects.html
+++ b/projects.html
@@ -13,17 +13,17 @@
 
   <body class="body-style">
     <div class="news">
-      <div class='news-text'>更新时间：6月15日，小站刚建成，有bug还请多见谅。</div>
+      <div class="news-text">更新时间：6月15日，小站刚建成，有bug还请多见谅。</div>
     </div>
 
     <!-- navigation -->
     <div class="navigation">
       <!-- 横版 -->
       <div class="navigation-content">
-        <div class="logo">Hu</div>
+        <div class="logo ">Hu</div>
         <div class="navigation-choice">
           <a href="index.html">
-            <div class="choice choice-home choice-focused choice-focused-home">
+            <div class="choice choice-home ">
               主页
             </div>
           </a>
@@ -34,7 +34,7 @@
             <div class="choice choice-home">专业技能</div>
           </a>
           <a href="projects.html">
-            <div class="choice choice-home">项目经历</div>
+            <div class="choice choice-home choice-focused choice-focused-home">项目经历</div>
           </a>
           <a href="about.html">
             <div class="choice choice-home">关于本站</div>
@@ -81,21 +81,7 @@
     </div>
 
     <!-- home-ins -->
-    <div class="home-ins home-ins-home">
-      <div class="ins-content">
-        <div class="ins-left">
-          <div class="ins-news">
-            <div class="ins-news-logo">New</div>
-            <div class="ins-news-title">小破站的艰辛建站史</div>
-            <div class="ins-arrow"></div>
-          </div>
-          <div class="ins-title">因为兴趣使然而建立的小站</div>
-          <div class="ins-ins">
-            用于放置学习笔记、项目经验总结、技能清单、以及最右边小小的GitHub链接。快点击顶部的导航来选择感兴趣的内容吧！
-          </div>
-        </div>
-      </div>
-    </div>
+    <div class="home-ins home-ins-other">敬请期待</div>
 
     <!-- bottom -->
     <div class="bottom">
