--- a/study-notes.html
+++ b/study-notes.html
@@ -13,9 +13,7 @@
 
   <body class="body-style">
     <div class="news">
-      <div class="news-text">
-        更新时间：6月13日，小站刚建成，有bug还请多见谅。
-      </div>
+      <div class="news-text">更新时间：6月15日，小站刚建成，有bug还请多见谅。</div>
     </div>
 
     <!-- navigation -->
@@ -138,7 +136,6 @@
           <a><div>1. 版本管理</div></a>
         </div>
       </div>
-
     </div>
 
     <!-- bottom -->
