--- a/about.html
+++ b/about.html
@@ -13,19 +13,19 @@
 
   <body class="body-style">
     <div class="news">
-      <div class="news-text">更新时间：6月15日，小站刚建成，有bug还请多见谅。</div>
+      <div class="news-text">
+        更新时间：6月15日，小站刚建成，有bug还请多见谅。
+      </div>
     </div>
 
     <!-- navigation -->
     <div class="navigation">
       <!-- 横版 -->
       <div class="navigation-content">
-        <div class="logo ">Hu</div>
+        <div class="logo">Hu</div>
         <div class="navigation-choice">
           <a href="index.html">
-            <div class="choice choice-home ">
-              主页
-            </div>
+            <div class="choice choice-home">主页</div>
           </a>
           <a href="study-notes.html">
             <div class="choice choice-home">学习笔记</div>
@@ -37,7 +37,9 @@
             <div class="choice choice-home">项目经历</div>
           </a>
           <a href="about.html">
-            <div class="choice choice-home choice-focused choice-focused-home">关于本站</div>
+            <div class="choice choice-home choice-focused choice-focused-home">
+              关于本站
+            </div>
           </a>
           <a href="https://github.com/zanlaihu">
             <div class="github github-white"></div>
@@ -81,7 +83,9 @@
     </div>
 
     <!-- home-ins -->
-    <div class="home-ins home-ins-other">敬请期待</div>
+    <div class="home-ins home-ins-other">
+      <div class="ins-content"></div>
+    </div>
 
     <!-- bottom -->
     <div class="bottom">
