--- a/skills.html
+++ b/skills.html
@@ -81,7 +81,9 @@
     </div>
 
     <!-- home-ins -->
-    <div class="home-ins home-ins-other">敬请期待</div>
+    <div class="home-ins home-ins-other">
+      <div class="ins-content"></div>
+    </div>
 
     <!-- bottom -->
     <div class="bottom">
