--- a/about.html
+++ b/about.html
@@ -12,14 +12,14 @@
   </head>
 
   <body class="body-style">
-    <div class="news">
+    <div class="news news-golden">
       <div class="news-text">
         更新时间：6月15日，小站刚建成，有bug还请多见谅。
       </div>
     </div>
 
     <!-- navigation -->
-    <div class="navigation">
+    <div class="navigation navigation-grey">
       <!-- 横版 -->
       <div class="navigation-content">
         <div class="logo">Hu</div>
@@ -53,6 +53,7 @@
       <!-- 下拉 -->
       <div class="dropdown">
         <div class="dropdown-line dropdown-line-white"></div>
+        <div class="dropdown-line-show dropdown-line-white-show"></div>
         <div class="dropdown-menu dropdown-menu-white">
           <a href="index.html">
             <p>主页</p>
