--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
 
   <body class="body-style">
-    <div class="news">
+    <div class="news news-purple">
       <div class='news-text'>更新时间：6月15日，小站刚建成，有bug还请多见谅。</div>
     </div>
 
