--- a/skills.html
+++ b/skills.html
@@ -12,7 +12,7 @@
   </head>
 
   <body class="body-style">
-    <div class="news">
+    <div class="news news-golden">
       <div class="news-text">更新时间：6月15日，小站刚建成，有bug还请多见谅。</div>
     </div>
 
@@ -82,7 +82,9 @@
 
     <!-- home-ins -->
     <div class="home-ins home-ins-other">
-      <div class="ins-content"></div>
+      <div class="ins-content">
+        <div style="width: 100%;font-size: 50px;text-align: center;margin-top: 150px;">敬请期待</div>
+      </div>
     </div>
 
     <!-- bottom -->
