[add] full-index

--- a/study-notes.html
+++ b/study-notes.html
@@ -13,7 +13,9 @@
 
   <body class="body-style">
     <div class="news news-purple">
-      <div class="news-text">更新时间：6月15日，小站刚建成，有bug还请多见谅。</div>
+      <div class="news-text">
+        更新时间：6月15日，小站刚建成，有bug还请多见谅。
+      </div>
     </div>
 
     <!-- navigation -->
@@ -106,6 +108,14 @@
           <a><div>3 添加样式</div></a>
           <a><div>CSS问题汇总</div></a>
         </div>
+        <div class="single-content">
+          <a><div>CSS3</div></a>
+          <a><div>dropback-filter(毛玻璃)</div></a>
+        </div>
+        <div class="single-content">
+          <a><div>SVG</div></a>
+          <a><div>1 SVG线性渐变</div></a>
+        </div>
       </div>
       <div class="full-index-content">
         <div class="single-content-title">框架</div>
@@ -118,10 +128,25 @@
           <a><div>2 JSX</div></a>
           <a><div>3 元素更新</div></a>
           <a><div>4 组件 props</div></a>
-          <a><div>5 声明周期 states</div></a>
+          <a><div>5 生命周期 states</div></a>
         </div>
         <div class="single-content">
           <a><div>jQuery</div></a>
+          <a><div>1 什么是jQuery</div></a>
+          <a><div>1.2 语法</div></a>
+          <a><div>1.3 选择器</div></a>
+          <a><div>1.4 事件</div></a>
+          <a><div>2.1 隐藏和显示</div></a>
+          <a><div>2.2 淡入淡出</div></a>
+          <a><div>2.3 滑动</div></a>
+          <a><div>2.4 动画/停止动画</div></a>
+          <a><div>2.5 callback</div></a>
+          <a><div>2.6 链</div></a>
+          <a><div>3.1 获取/设置 内容和属性</div></a>
+          <a><div>3.2 添加/删除元素</div></a>
+          <a><div>3.3 获取和设置CSS</div></a>
+          <a><div>3.4 尺寸</div></a>
+          <a><div>jQuery的不足</div></a>
         </div>
       </div>
       <div class="full-index-content">
