--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 
   <body class="body-style">
     <div class="news news-purple">
-      <div class='news-text'>更新时间：6月15日，小站刚建成，有bug还请多见谅。</div>
+      <div class="news-text">
+        更新时间：6月15日，小站刚建成，有bug还请多见谅。
+      </div>
     </div>
 
     <!-- navigation -->
@@ -84,11 +86,14 @@
     <div class="home-ins home-ins-home">
       <div class="ins-content">
         <div class="ins-left">
-          <div class="ins-news">
-            <div class="ins-news-logo">New</div>
-            <div class="ins-news-title">小破站的艰辛建站史</div>
-            <div class="ins-arrow"></div>
-          </div>
+          
+            <div class="ins-news">
+              <div class="ins-news-logo">New</div>
+              <div class="ins-news-title">小破站的艰辛建站史</div>
+              <div class="ins-arrow"></div>
+            </div>
+          
+
           <div class="ins-title">因为兴趣使然而建立的小站</div>
           <div class="ins-ins">
             用于放置学习笔记、项目经验总结、技能清单、以及最右边小小的GitHub链接。快点击顶部的导航来选择感兴趣的内容吧！
