--- a/study-notes.html
+++ b/study-notes.html
@@ -110,11 +110,11 @@
         </div>
         <div class="single-content">
           <a><div>CSS3</div></a>
-          <a><div>dropback-filter(毛玻璃)</div></a>
+          <a><div>dropback-filter</div></a>
         </div>
         <div class="single-content">
           <a><div>SVG</div></a>
-          <a><div>1 SVG线性渐变</div></a>
+          <a><div>1 线性渐变</div></a>
         </div>
       </div>
       <div class="full-index-content">
@@ -168,6 +168,7 @@
       <div class="bottom-contact">
         <div class="contact-title">联系方式</div>
         <div class="contact-message">邮箱：klaus@outlook.com</div>
+        <div class="contact-message">邮箱：361206768@qq.com</div>
       </div>
       <div class="bottom-line"></div>
       <div class="bottom-label">Made with ❤️ by Zanlai.</div>
