--- a/study-notes.html
+++ b/study-notes.html
@@ -167,8 +167,7 @@
     <div class="bottom">
       <div class="bottom-contact">
         <div class="contact-title">联系方式</div>
-        <div class="contact-message">邮箱：klaus@outlook.com</div>
-        <div class="contact-message">邮箱：361206768@qq.com</div>
+        <div class="contact-message">邮箱：klaushu@outlook.com</div>
       </div>
       <div class="bottom-line"></div>
       <div class="bottom-label">Made with ❤️ by Zanlai.</div>
