--- a/about.html
+++ b/about.html
@@ -13,9 +13,7 @@
 
   <body class="body-style">
     <div class="news news-golden">
-      <div class="news-text">
-        更新时间：6月15日，小站刚建成，有bug还请多见谅。
-      </div>
+      <div class="news-text">更新时间：</div>
     </div>
 
     <!-- navigation -->
@@ -85,7 +83,9 @@
 
     <!-- home-ins -->
     <div class="home-ins home-ins-other">
-      <div class="ins-content"></div>
+      <div class="ins-content">
+        <div class="">得益于免费的GitHub Pages，本站得以搭建。</div>
+      </div>
     </div>
 
     <!-- bottom -->
