--- a/study-notes.html
+++ b/study-notes.html
@@ -13,9 +13,7 @@
 
   <body class="body-style">
     <div class="news news-purple">
-      <div class="news-text">
-        更新时间：6月15日，小站刚建成，有bug还请多见谅。
-      </div>
+      <div class="news-text">更新时间：</div>
     </div>
 
     <!-- navigation -->
