--- a/index.html
+++ b/index.html
@@ -13,9 +13,7 @@
 
   <body class="body-style">
     <div class="news news-purple">
-      <div class="news-text">
-        更新时间：6月15日，小站刚建成，有bug还请多见谅。
-      </div>
+      <div class="news-text">更新时间：</div>
     </div>
 
     <!-- navigation -->
@@ -86,13 +84,11 @@
     <div class="home-ins home-ins-home">
       <div class="ins-content">
         <div class="ins-left">
-          
-            <div class="ins-news">
-              <div class="ins-news-logo">New</div>
-              <div class="ins-news-title">小破站的艰辛建站史</div>
-              <div class="ins-arrow"></div>
-            </div>
-          
+          <div class="ins-news">
+            <div class="ins-news-logo">New</div>
+            <div class="ins-news-title">小破站的艰辛建站史</div>
+            <div class="ins-arrow"></div>
+          </div>
 
           <div class="ins-title">因为兴趣使然而建立的小站</div>
           <div class="ins-ins">
