--- a/study-notes.html
+++ b/study-notes.html
@@ -88,16 +88,16 @@
       <div class="full-index-content">
         <div class="single-content-title">基础</div>
         <div class="single-content">
-          <a><div>JavaScript</div></a>
-          <a><div>1 什么是JavaScript</div></a>
-          <a><div>2 script标签</div></a>
-          <a><div>3 语法</div></a>
-          <a><div>4 变量声明</div></a>
-          <a><div>5 数据类型</div></a>
-          <a><div>6 数据类型之对象</div></a>
-          <a><div>7 操作符</div></a>
-          <a><div>8 逻辑语句</div></a>
-          <a><div>JavaScript问题汇总</div></a>
+          <a href="./study-notes/JavaScript/js.html"><div>JavaScript</div></a>
+          <a href="./study-notes/JavaScript/js-1.html"><div>1 什么是JavaScript</div></a>
+          <a href="./study-notes/JavaScript/js-2.html"><div>2 script标签</div></a>
+          <a href="./study-notes/JavaScript/js-3.html"><div>3 语法</div></a>
+          <a href="./study-notes/JavaScript/js-4.html"><div>4 变量声明</div></a>
+          <a href="./study-notes/JavaScript/js-5.html"><div>5 数据类型</div></a>
+          <a href="./study-notes/JavaScript/js-6.html"><div>6 数据类型之对象</div></a>
+          <a href="./study-notes/JavaScript/js-7.html"><div>7 操作符</div></a>
+          <a href="./study-notes/JavaScript/js-8.html"><div>8 逻辑语句</div></a>
+          <a href="./study-notes/JavaScript/js-q.html"><div>JavaScript问题汇总</div></a>
         </div>
         <div class="single-content">
           <a><div>CSS</div></a>
