--- a/study-notes/JavaScript/js-7.html
+++ b/study-notes/JavaScript/js-7.html
@@ -1,108 +1,119 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <title>Hu Zanlai Website</title>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1,
+			user-scalable=no"
+    />
+    <link rel="stylesheet" href="../../assets/css/main.css" />
+  </head>
 
-<head>
-  <title>Hu Zanlai Website</title>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1,
-			user-scalable=no" />
-  <link rel="stylesheet" href="../../assets/css/main.css" />
-</head>
+  <body class="body-style">
+    <div>
+      <!-- Header -->
+      <div class="news news-purple">
+        <div class="news-text">更新时间：</div>
+      </div>
 
-<body class="body-style">
-  <div>
-    <!-- Header -->
-    <div class="news">
-      <div class="news-text">
-        ❤️❤️❤️小站初建成，有bug还请多见谅！手机尺寸适配仍在调试中，请使用电脑端chrome/safari访问来获得最佳体验！❤️❤️❤️
+      <!-- navigation -->
+      <div class="navigation">
+        <div class="study-logo">
+          <p>学习笔记</p>
+          <div class="sidebar-icon"></div>
+        </div>
+        <!-- 横版 -->
+        <div class="navigation-content navigation-content-unhome">
+          <div class="logo logo-center">Hu</div>
+          <div class="navigation-choice navigation-choice-unhome">
+            <a>
+              <div class="choice choice-study">主页</div>
+            </a>
+            <a>
+              <div
+                class="choice choice-study choice-focused choice-focused-study"
+              >
+                学习笔记
+              </div>
+            </a>
+            <a>
+              <div class="choice choice-study">专业技能</div>
+            </a>
+            <a>
+              <div class="choice choice-study">项目经历</div>
+            </a>
+            <a>
+              <div class="choice choice-study">关于本站</div>
+            </a>
+            <a href="https://github.com/zanlaihu">
+              <div class="github github-black"></div>
+            </a>
+          </div>
+          <div class="inner-header-icon inner-header-icon-unhome">
+            <span> </span>
+            <span> </span>
+          </div>
+        </div>
+        <!-- 下拉 -->
+        <div class="dropdown">
+          <div class="dropdown-line dropdown-line-black"></div>
+          <div class="dropdown-menu dropdown-menu-black">
+            <a>
+              <p>主页</p>
+            </a>
+            <hr />
+            <a>
+              <p>学习笔记</p>
+            </a>
+            <hr />
+            <a>
+              <p>专业技能</p>
+            </a>
+            <hr />
+            <a>
+              <p>项目经历</p>
+            </a>
+            <hr />
+            <a>
+              <p>关于本站</p>
+            </a>
+            <hr />
+            <a href="https://github.com/zanlaihu">
+              <p>GitHub</p>
+            </a>
+            <hr />
+          </div>
+        </div>
+      </div>
+
+      <!-- 侧边栏 -->
+      <div class="sidebar"></div>
+
+      <div class="outline"></div>
+
+      <div class="right-content">
+        <div class="content-content"></div>
+
+        <div class="bottom unhome-padding">
+          <div class="bottom-contact">
+            <div class="contact-title">联系方式</div>
+            <div class="contact-message">手机：13867908869</div>
+            <div class="contact-message">微信：13867908869</div>
+            <div class="contact-message">邮箱：klaus@outlook.com</div>
+          </div>
+          <div class="bottom-line"></div>
+          <div class="bottom-logo">
+            <div class="profile-pic"></div>
+          </div>
+          <div class="bottom-label">Made with ❤️ by Zanlai.</div>
+        </div>
+        <!-- JavaScript -->
+        <script src="../../assets/js/jquery-3.6.0.min.js"></script>
+        <script src="../../assets/js/main.js"></script>
+        <script src="../../assets/js/js-common.js"></script>
       </div>
     </div>
-
-    <!-- header -->
-    <div class="navigation navigation-unhome">
-      <div class="navigation-content">
-        <!-- 宇航员 -->
-        <div class="profile">
-          <div class="profile-pic"></div>
-        </div>
-        <!-- 名字 -->
-        <div class="logo logo1">Hu <br />Zanlai</div>
-        <!-- 导航 -->
-        <div class="navigation-choice">
-          <a href="../../index.html">
-            <div class="unhome-choice">主页</div>
-          </a>
-          <a href="../../study-notes.html">
-            <div class="unhome-focused unhome-choice">学习笔记</div>
-          </a>
-          <a href="">
-            <div class="unhome-choice">专业技能</div>
-          </a>
-          <a href="">
-            <div class="unhome-choice">项目经历</div>
-          </a>
-          <a href="">
-            <div class="unhome-choice">关于本站</div>
-          </a>
-          <!-- github logo -->
-          <a href="https://github.com/zanlaihu">
-            <div class="github"></div>
-          </a>
-        </div>
-      </div>
-    </div>
-
-    <!-- 侧边栏 -->
-    <div class="sidebar">
-      <a href="../../study-notes.html">
-        <div class="know-name know-name-focus">JavaScript</div>
-      </a>
-      <a href="js-1.html">
-        <div class="chapter ">1 什么是JavaScript</div>
-      </a>
-      <a href="js-2.html">
-        <div class="chapter">2 script标签</div>
-      </a>
-      <a href="js-3.html">
-        <div class="chapter">3 语法</div>
-      </a>
-      <a href="js-4.html">
-        <div class="chapter">4 var,let,const</div>
-      </a>
-      <a href="js-5.html">
-        <div class="chapter">5 数据类型</div>
-      </a>
-      <a href="js-6.html">
-        <div class="chapter">6 对象</div>
-      </a>
-      <a href="js-7.html">
-        <div class="chapter chapter-choosen">7 操作符</div>
-      </a>
-      <a href="js-8.html">
-        <div class="chapter">8 语句</div>
-      </a>
-    </div>
-
-    <div class="outline"></div>
-
-    <div class="right-content">
-      <div class="content-content"></div>
-
-      <div class="bottom unhome-padding">
-        <div class="bottom-contact">
-          <div class="contact-title">联系方式</div>
-          <div class="contact-message">手机：13867908869</div>
-          <div class="contact-message">微信：13867908869</div>
-          <div class="contact-message">邮箱：klaus@outlook.com</div>
-        </div>
-        <div class="bottom-line"></div>
-        <div class="bottom-logo">
-          <div class="profile-pic"></div>
-        </div>
-        <div class="bottom-label">Made with ❤️ by Zanlai.</div>
-      </div>
-    </div>
-  </div>
-</body>
-
+  </body>
 </html>
