--- a/study-notes/JavaScript/js.html
+++ b/study-notes/JavaScript/js.html
@@ -12,10 +12,8 @@
   </head>
 
   <body class="body-style">
-    <div class="news">
-      <div class="news-text">
-        更新时间：6月13日，小站刚建成，有bug还请多见谅。
-      </div>
+    <div class="news news-purple">
+      <div class="news-text">更新时间：</div>
     </div>
 
     <!-- navigation -->
@@ -28,23 +26,23 @@
       <div class="navigation-content navigation-content-unhome">
         <div class="logo logo-center">Hu</div>
         <div class="navigation-choice navigation-choice-unhome">
-          <a href="index.html">
+          <a>
             <div class="choice choice-study">主页</div>
           </a>
-          <a href="study-notes.html">
+          <a>
             <div
               class="choice choice-study choice-focused choice-focused-study"
             >
               学习笔记
             </div>
           </a>
-          <a href="skills.html">
+          <a>
             <div class="choice choice-study">专业技能</div>
           </a>
-          <a href="projects.html">
+          <a>
             <div class="choice choice-study">项目经历</div>
           </a>
-          <a href="about.html">
+          <a>
             <div class="choice choice-study">关于本站</div>
           </a>
           <a href="https://github.com/zanlaihu">
@@ -60,23 +58,23 @@
       <div class="dropdown">
         <div class="dropdown-line dropdown-line-black"></div>
         <div class="dropdown-menu dropdown-menu-black">
-          <a href="index.html">
+          <a>
             <p>主页</p>
           </a>
           <hr />
-          <a href="study-notes.html">
+          <a>
             <p>学习笔记</p>
           </a>
           <hr />
-          <a href="skills.html">
+          <a>
             <p>专业技能</p>
           </a>
           <hr />
-          <a href="projects.html">
+          <a>
             <p>项目经历</p>
           </a>
           <hr />
-          <a href="about.html">
+          <a>
             <p>关于本站</p>
           </a>
           <hr />
@@ -141,6 +139,6 @@
     <!-- JavaScript -->
     <script src="../../assets/js/jquery-3.6.0.min.js"></script>
     <script src="../../assets/js/main.js"></script>
-    <script src="../../assets/js/sidebar.js"></script>
+    <script src="../../assets/js/js-common.js"></script>
   </body>
 </html>
