--- a/study-notes/JavaScript/js-4.html
+++ b/study-notes/JavaScript/js-4.html
@@ -359,25 +359,21 @@
             声明的变量在浏览器运行时强制保持不变，方便静态代码分析工具提前发现不合法的赋值操作。
           </p>
         </div>
-
-        <div class="bottom unhome-padding">
-          <div class="bottom-contact">
-            <div class="contact-title">联系方式</div>
-            <div class="contact-message">手机：13867908869</div>
-            <div class="contact-message">微信：13867908869</div>
-            <div class="contact-message">邮箱：klaus@outlook.com</div>
-          </div>
-          <div class="bottom-line"></div>
-          <div class="bottom-logo">
-            <div class="profile-pic"></div>
-          </div>
-          <div class="bottom-label">Made with ❤️ by Zanlai.</div>
-        </div>
-        <!-- JavaScript -->
-        <script src="../../assets/js/jquery-3.6.0.min.js"></script>
-        <script src="../../assets/js/main.js"></script>
-        <script src="../../assets/js/js-common.js"></script>
       </div>
     </div>
+    <!-- bottom -->
+    <div class="bottom">
+      <div class="bottom-contact">
+        <div class="contact-title">联系方式</div>
+        <div class="contact-message">邮箱：klaus@outlook.com</div>
+      </div>
+      <div class="bottom-line"></div>
+      <div class="bottom-label">Made with ❤️ by Zanlai.</div>
+    </div>
+
+    <!-- JavaScript -->
+    <script src="../../assets/js/jquery-3.6.0.min.js"></script>
+    <script src="../../assets/js/main.js"></script>
+    <script src="../../assets/js/js-common.js"></script>
   </body>
 </html>
