--- a/study-notes/JavaScript/js-8.html
+++ b/study-notes/JavaScript/js-8.html
@@ -96,25 +96,20 @@
 
       <div class="right-content">
         <div class="content-content"></div>
-
-        <div class="bottom unhome-padding">
-          <div class="bottom-contact">
-            <div class="contact-title">联系方式</div>
-            <div class="contact-message">手机：13867908869</div>
-            <div class="contact-message">微信：13867908869</div>
-            <div class="contact-message">邮箱：klaus@outlook.com</div>
-          </div>
-          <div class="bottom-line"></div>
-          <div class="bottom-logo">
-            <div class="profile-pic"></div>
-          </div>
-          <div class="bottom-label">Made with ❤️ by Zanlai.</div>
-        </div>
-        <!-- JavaScript -->
-        <script src="../../assets/js/jquery-3.6.0.min.js"></script>
-        <script src="../../assets/js/main.js"></script>
-        <script src="../../assets/js/js-common.js"></script>
       </div>
     </div>
+    <!-- bottom -->
+    <div class="bottom">
+      <div class="bottom-contact">
+        <div class="contact-title">联系方式</div>
+        <div class="contact-message">邮箱：klaus@outlook.com</div>
+      </div>
+      <div class="bottom-line"></div>
+      <div class="bottom-label">Made with ❤️ by Zanlai.</div>
+    </div>
+    <!-- JavaScript -->
+    <script src="../../assets/js/jquery-3.6.0.min.js"></script>
+    <script src="../../assets/js/main.js"></script>
+    <script src="../../assets/js/js-common.js"></script>
   </body>
 </html>
