--- a/study-notes/JavaScript/js-1.html
+++ b/study-notes/JavaScript/js-1.html
@@ -18,75 +18,75 @@
         <div class="news-text">更新时间：</div>
       </div>
 
-    <!-- navigation -->
-    <div class="navigation">
-      <div class="study-logo">
-        <p>学习笔记</p>
-        <div class="sidebar-icon"></div>
-      </div>
-      <!-- 横版 -->
-      <div class="navigation-content navigation-content-unhome">
-        <div class="logo logo-center">Hu</div>
-        <div class="navigation-choice navigation-choice-unhome">
-          <a>
-            <div class="choice choice-study">主页</div>
-          </a>
-          <a>
-            <div
-              class="choice choice-study choice-focused choice-focused-study"
-            >
-              学习笔记
-            </div>
-          </a>
-          <a>
-            <div class="choice choice-study">专业技能</div>
-          </a>
-          <a>
-            <div class="choice choice-study">项目经历</div>
-          </a>
-          <a>
-            <div class="choice choice-study">关于本站</div>
-          </a>
-          <a href="https://github.com/zanlaihu">
-            <div class="github github-black"></div>
-          </a>
+      <!-- navigation -->
+      <div class="navigation">
+        <div class="study-logo">
+          <p>学习笔记</p>
+          <div class="sidebar-icon"></div>
         </div>
-        <div class="inner-header-icon inner-header-icon-unhome">
-          <span> </span>
-          <span> </span>
+        <!-- 横版 -->
+        <div class="navigation-content navigation-content-unhome">
+          <div class="logo logo-center">Hu</div>
+          <div class="navigation-choice navigation-choice-unhome">
+            <a>
+              <div class="choice choice-study">主页</div>
+            </a>
+            <a>
+              <div
+                class="choice choice-study choice-focused choice-focused-study"
+              >
+                学习笔记
+              </div>
+            </a>
+            <a>
+              <div class="choice choice-study">专业技能</div>
+            </a>
+            <a>
+              <div class="choice choice-study">项目经历</div>
+            </a>
+            <a>
+              <div class="choice choice-study">关于本站</div>
+            </a>
+            <a href="https://github.com/zanlaihu">
+              <div class="github github-black"></div>
+            </a>
+          </div>
+          <div class="inner-header-icon inner-header-icon-unhome">
+            <span> </span>
+            <span> </span>
+          </div>
+        </div>
+        <!-- 下拉 -->
+        <div class="dropdown">
+          <div class="dropdown-line dropdown-line-black"></div>
+          <div class="dropdown-menu dropdown-menu-black">
+            <a>
+              <p>主页</p>
+            </a>
+            <hr />
+            <a>
+              <p>学习笔记</p>
+            </a>
+            <hr />
+            <a>
+              <p>专业技能</p>
+            </a>
+            <hr />
+            <a>
+              <p>项目经历</p>
+            </a>
+            <hr />
+            <a>
+              <p>关于本站</p>
+            </a>
+            <hr />
+            <a href="https://github.com/zanlaihu">
+              <p>GitHub</p>
+            </a>
+            <hr />
+          </div>
         </div>
       </div>
-      <!-- 下拉 -->
-      <div class="dropdown">
-        <div class="dropdown-line dropdown-line-black"></div>
-        <div class="dropdown-menu dropdown-menu-black">
-          <a>
-            <p>主页</p>
-          </a>
-          <hr />
-          <a>
-            <p>学习笔记</p>
-          </a>
-          <hr />
-          <a>
-            <p>专业技能</p>
-          </a>
-          <hr />
-          <a>
-            <p>项目经历</p>
-          </a>
-          <hr />
-          <a>
-            <p>关于本站</p>
-          </a>
-          <hr />
-          <a href="https://github.com/zanlaihu">
-            <p>GitHub</p>
-          </a>
-          <hr />
-        </div>
-      </div>
-    </div>
 
       <!-- 侧边栏 -->
       <div class="sidebar"></div>
@@ -188,25 +188,21 @@
           <p>5. screen</p>
           <p>6. 其他自定义对象，如 XMLHttpRequest 和 IE 的 ActiveXObject。</p>
         </div>
-
-        <div class="bottom unhome-padding">
-          <div class="bottom-contact">
-            <div class="contact-title">联系方式</div>
-            <div class="contact-message">手机：13867908869</div>
-            <div class="contact-message">微信：13867908869</div>
-            <div class="contact-message">邮箱：klaus@outlook.com</div>
-          </div>
-          <div class="bottom-line"></div>
-          <div class="bottom-logo">
-            <div class="profile-pic"></div>
-          </div>
-          <div class="bottom-label">Made with ❤️ by Zanlai.</div>
-        </div>
-        <!-- JavaScript -->
-        <script src="../../assets/js/jquery-3.6.0.min.js"></script>
-        <script src="../../assets/js/main.js"></script>
-        <script src="../../assets/js/js-common.js"></script>
       </div>
     </div>
+    <!-- bottom -->
+    <div class="bottom">
+      <div class="bottom-contact">
+        <div class="contact-title">联系方式</div>
+        <div class="contact-message">邮箱：klaus@outlook.com</div>
+      </div>
+      <div class="bottom-line"></div>
+      <div class="bottom-label">Made with ❤️ by Zanlai.</div>
+    </div>
+
+    <!-- JavaScript -->
+    <script src="../../assets/js/jquery-3.6.0.min.js"></script>
+    <script src="../../assets/js/main.js"></script>
+    <script src="../../assets/js/js-common.js"></script>
   </body>
 </html>
