--- a/study-notes/JavaScript/js-10.html
+++ b/study-notes/JavaScript/js-10.html
@@ -17,7 +17,7 @@
     </div>
 
     <!-- navigation -->
-    <div class="navigation">
+    <div class="navigation navigation-shadow">
       <div class="study-logo">
         <p>学习笔记</p>
         <div class="sidebar-icon"></div>
@@ -84,10 +84,9 @@
           <hr />
         </div>
       </div>
+      <!-- sidebar -->
+      <div class="sidebar"></div>
     </div>
-
-    <!-- sidebar -->
-    <div class="sidebar"></div>
 
     <!-- note-content -->
     <div class="note-content"></div>
