--- a/study-notes/JavaScript/js-8.html
+++ b/study-notes/JavaScript/js-8.html
@@ -20,7 +20,7 @@
 
       <!-- header -->
       <!-- navigation -->
-      <div class="navigation">
+      <div class="navigation navigation-shadow">
         <div class="study-logo">
           <p>学习笔记</p>
           <div class="sidebar-icon"></div>
@@ -87,10 +87,9 @@
             <hr />
           </div>
         </div>
+        <!-- 侧边栏 -->
+        <div class="sidebar"></div>
       </div>
-
-      <!-- 侧边栏 -->
-      <div class="sidebar"></div>
 
       <div class="outline"></div>
 
