--- a/study-notes/JavaScript/js-5.html
+++ b/study-notes/JavaScript/js-5.html
@@ -19,7 +19,7 @@
       </div>
 
       <!-- navigation -->
-      <div class="navigation">
+      <div class="navigation navigation-shadow">
         <div class="study-logo">
           <p>学习笔记</p>
           <div class="sidebar-icon"></div>
@@ -86,10 +86,9 @@
             <hr />
           </div>
         </div>
+        <!-- 侧边栏 -->
+        <div class="sidebar"></div>
       </div>
-
-      <!-- 侧边栏 -->
-      <div class="sidebar"></div>
 
       <div class="outline"></div>
 
