--- a/about.html
+++ b/about.html
@@ -83,9 +83,18 @@
 
     <!-- home-ins -->
     <div class="home-ins home-ins-other">
-      <div class="ins-content">
-        <div class="">得益于免费的GitHub Pages，本站得以搭建。</div>
+      <div class="ins-content" style="text-align: center">
+        <div class="bottom-pic">
+          <img src="./assets/img/github-purple.svg" />
+        </div>
+        <div style="font-size: 38px; margin-bottom: 20px; line-height: 35px">
+          得益于GitHub Pages
+        </div>
+        <div style="padding-bottom: 100px">以免费的形式就让网页上线了。</div>
       </div>
+    </div>
+
+    <div style="background: #1d1d1d;">
     </div>
 
     <!-- bottom -->
