--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
           <div class="ins-ins">
             用于放置学习笔记、项目经验总结、技能清单、以及最右边小小的GitHub链接。快点击顶部的导航来选择感兴趣的内容吧！
           </div>
+          <div style="height: 400px;"></div>
         </div>
       </div>
     </div>
