--- a/skills.html
+++ b/skills.html
@@ -85,6 +85,7 @@
       <div class="ins-content">
         <div style="width: 100%;font-size: 50px;text-align: center;margin-top: 150px;">敬请期待</div>
       </div>
+      <div style="height: 400px;"></div>
     </div>
 
     <!-- bottom -->
