--- a/study-notes.html
+++ b/study-notes.html
@@ -20,7 +20,7 @@
     <div class="navigation navigation-shadow">
       <!-- 横版 -->
       <div class="navigation-content navigation-content-unhome">
-        <div class="logo logo-center">Hu</div>
+        <div class="logo">Hu</div>
         <div class="navigation-choice navigation-choice-unhome">
           <a href="index.html">
             <div class="choice choice-study">主页</div>
