--- a/study-notes.html
+++ b/study-notes.html
@@ -88,16 +88,24 @@
       <div class="full-index-content">
         <div class="single-content-title">基础</div>
         <div class="single-content">
-          <a href="./study-notes/JavaScript/js.html"><div>JavaScript</div></a>
-          <a href="./study-notes/JavaScript/js-1.html"><div>1 什么是JavaScript</div></a>
-          <a href="./study-notes/JavaScript/js-2.html"><div>2 script标签</div></a>
-          <a href="./study-notes/JavaScript/js-3.html"><div>3 语法</div></a>
-          <a href="./study-notes/JavaScript/js-4.html"><div>4 变量声明</div></a>
-          <a href="./study-notes/JavaScript/js-5.html"><div>5 数据类型</div></a>
-          <a href="./study-notes/JavaScript/js-6.html"><div>6 数据类型之对象</div></a>
-          <a href="./study-notes/JavaScript/js-7.html"><div>7 操作符</div></a>
-          <a href="./study-notes/JavaScript/js-8.html"><div>8 逻辑语句</div></a>
-          <a href="./study-notes/JavaScript/js-qa.html"><div>JavaScript问题汇总</div></a>
+          <a href="" target="_blank"><div>JavaScript初级</div></a>
+          <a href="https://juejin.cn/post/6934362238815830030" target="_blank" ><div>1 什么是JavaScript</div></a>
+          <a href="https://juejin.cn/post/6940502924346785800" target="_blank"><div>2 script标签</div></a>
+          <a href="https://juejin.cn/post/6940867148935856165" target="_blank"><div>3 语法</div></a>
+          <a href="https://juejin.cn/post/6941231089356800031" target="_blank"><div>4 变量声明</div></a>
+          <a href="https://juejin.cn/post/6943151642397114405" target="_blank"><div>5 数据类型：Undefined,Null,Boolean</div></a>
+          <a href="https://juejin.cn/post/6943536295561920542" target="_blank"><div>6 数据类型：Number</div></a>
+          <a href="https://juejin.cn/post/6943890408011202596" target="_blank"><div>7 数据类型：String</div></a>
+          <a href="https://juejin.cn/post/6945275867455029278" target="_blank"><div>8 数据类型：Symbol(未完)</div></a>
+          <a href="https://juejin.cn/post/6945752265797926942" target="_blank"><div>9 数据类型：对象之创建对象</div></a>
+          <a href="https://juejin.cn/post/6948326489192906782" target="_blank"><div>10 数据类型：对象之理解对象</div></a>
+          <a href="https://juejin.cn/post/6947996704339656712" target="_blank"><div>11 数据类型：对象的属性</div></a>
+          <a href="https://juejin.cn/post/6953505088673415176" target="_blank"><div>12 操作符</div></a>
+          <a href="https://juejin.cn/post/6955446562768027685" target="_blank"><div>13 语句</div></a>
+        </div>
+        <div class="single-content">
+          <a><div>JavaScript中级</div></a>
+          <a><div>1 网络请求与远程资源</div></a>
         </div>
         <div class="single-content">
           <a><div>CSS</div></a>
@@ -109,7 +117,12 @@
         <div class="single-content">
           <a><div>CSS3</div></a>
           <a><div>dropback-filter</div></a>
+          <a><div>word-break</div></a>
+          <a><div>word-wrap</div></a>
         </div>
+      </div>
+      <div class="full-index-content">
+        <div class="single-content-title">图形</div>
         <div class="single-content">
           <a><div>SVG</div></a>
           <a><div>1 线性渐变</div></a>
