--- a/study-notes.html
+++ b/study-notes.html
@@ -120,14 +120,18 @@
           <a><div>word-break</div></a>
           <a><div>word-wrap</div></a>
         </div>
-      </div>
-      <div class="full-index-content">
-        <div class="single-content-title">图形</div>
         <div class="single-content">
           <a><div>SVG</div></a>
           <a><div>1 线性渐变</div></a>
         </div>
       </div>
+      <!-- <div class="full-index-content">
+        <div class="single-content-title">图形</div>
+        <div class="single-content">
+          <a><div>SVG</div></a>
+          <a><div>1 线性渐变</div></a>
+        </div>
+      </div> -->
       <div class="full-index-content">
         <div class="single-content-title">框架</div>
         <!-- <div class="single-content">
