--- a/about.html
+++ b/about.html
@@ -83,9 +83,9 @@
 
     <!-- home-ins -->
     <div class="home-ins home-ins-other">
-      <div class="ins-content" style="text-align: center">
+      <div class="ins-content" style="text-align: center;">
         <div class="bottom-pic">
-          <img src="./assets/img/github-purple.svg" />
+          <img src="./assets/img/cat-cake.png" width="130px"/>
         </div>
         <div style="font-size: 38px; margin-bottom: 20px; line-height: 35px">
           得益于GitHub Pages
