--- a/about.html
+++ b/about.html
@@ -82,19 +82,23 @@
     </div>
 
     <!-- home-ins -->
-    <div class="home-ins home-ins-other">
+    <div class="home-ins home-ins-other" style="height: 390px;">
       <div class="ins-content" style="text-align: center;">
         <div class="bottom-pic">
           <img src="./assets/img/cat-cake.png" width="130px"/>
         </div>
-        <div style="font-size: 38px; margin-bottom: 20px; line-height: 35px">
+        <div style="font-size: 38px; margin-bottom: 20px; line-height: 42px">
           得益于GitHub Pages
         </div>
         <div style="padding-bottom: 100px">以免费的形式就让网页上线了。</div>
       </div>
     </div>
 
-    <div style="background: #1d1d1d;">
+    <div class="about-content">
+      <div class="about-signle-content">aksjfaklsdjfalsdjfalksjdf</div>
+      <div class="about-signle-content">aksjfaklsdjfalsdjfalksjdf</div>
+    </div>
+
     </div>
 
     <!-- bottom -->
