--- a/study-notes.html
+++ b/study-notes.html
@@ -89,19 +89,45 @@
         <div class="single-content-title">基础</div>
         <div class="single-content">
           <a href="" target="_blank"><div>JavaScript初级</div></a>
-          <a href="https://juejin.cn/post/6934362238815830030" target="_blank" ><div>1 什么是JavaScript</div></a>
-          <a href="https://juejin.cn/post/6940502924346785800" target="_blank"><div>2 script标签</div></a>
-          <a href="https://juejin.cn/post/6940867148935856165" target="_blank"><div>3 语法</div></a>
-          <a href="https://juejin.cn/post/6941231089356800031" target="_blank"><div>4 变量声明</div></a>
-          <a href="https://juejin.cn/post/6943151642397114405" target="_blank"><div>5 数据类型：Undefined,Null,Boolean</div></a>
-          <a href="https://juejin.cn/post/6943536295561920542" target="_blank"><div>6 数据类型：Number</div></a>
-          <a href="https://juejin.cn/post/6943890408011202596" target="_blank"><div>7 数据类型：String</div></a>
-          <a href="https://juejin.cn/post/6945275867455029278" target="_blank"><div>8 数据类型：Symbol(未完)</div></a>
-          <a href="https://juejin.cn/post/6945752265797926942" target="_blank"><div>9 数据类型：对象之创建对象</div></a>
-          <a href="https://juejin.cn/post/6948326489192906782" target="_blank"><div>10 数据类型：对象之理解对象</div></a>
-          <a href="https://juejin.cn/post/6947996704339656712" target="_blank"><div>11 数据类型：对象的属性</div></a>
-          <a href="https://juejin.cn/post/6953505088673415176" target="_blank"><div>12 操作符</div></a>
-          <a href="https://juejin.cn/post/6955446562768027685" target="_blank"><div>13 语句</div></a>
+          <a href="https://juejin.cn/post/6934362238815830030" target="_blank"
+            ><div>1 什么是JavaScript</div></a
+          >
+          <a href="https://juejin.cn/post/6940502924346785800" target="_blank"
+            ><div>2 script标签</div></a
+          >
+          <a href="https://juejin.cn/post/6940867148935856165" target="_blank"
+            ><div>3 语法</div></a
+          >
+          <a href="https://juejin.cn/post/6941231089356800031" target="_blank"
+            ><div>4 变量声明</div></a
+          >
+          <a href="https://juejin.cn/post/6943151642397114405" target="_blank"
+            ><div>5 数据类型：Undefined,Null,Boolean</div></a
+          >
+          <a href="https://juejin.cn/post/6943536295561920542" target="_blank"
+            ><div>6 数据类型：Number</div></a
+          >
+          <a href="https://juejin.cn/post/6943890408011202596" target="_blank"
+            ><div>7 数据类型：String</div></a
+          >
+          <a href="https://juejin.cn/post/6945275867455029278" target="_blank"
+            ><div>8 数据类型：Symbol(未完)</div></a
+          >
+          <a href="https://juejin.cn/post/6945752265797926942" target="_blank"
+            ><div>9 数据类型：对象之创建对象</div></a
+          >
+          <a href="https://juejin.cn/post/6948326489192906782" target="_blank"
+            ><div>10 数据类型：对象之理解对象</div></a
+          >
+          <a href="https://juejin.cn/post/6947996704339656712" target="_blank"
+            ><div>11 数据类型：对象的属性</div></a
+          >
+          <a href="https://juejin.cn/post/6953505088673415176" target="_blank"
+            ><div>12 操作符</div></a
+          >
+          <a href="https://juejin.cn/post/6955446562768027685" target="_blank"
+            ><div>13 语句</div></a
+          >
         </div>
         <div class="single-content">
           <a><div>JavaScript中级</div></a>
@@ -116,6 +142,10 @@
         </div>
         <div class="single-content">
           <a><div>CSS3</div></a>
+
+          <a href="" target="_blank"><div>1 弹性盒子</div></a>
+          <a href="" target="_blank"><div>2 多媒体查询</div></a>
+          <a href="" target="_blank"><div>3 自定义字体</div></a>
           <a><div>dropback-filter</div></a>
           <a><div>word-break</div></a>
           <a><div>word-wrap</div></a>
